--- a/game.html
+++ b/game.html
@@ -13,7 +13,7 @@
         }
     </style>
 
-    <skript>
+    <script>
         let KEY_SPACE = false; // 32
         let KEY_UP = false; // 38
         let KEY_DOWN = false; //40
@@ -91,7 +91,7 @@
 
         requestAnimationFrame(draw);
 
-    </skript>
+    </script>
 
 </head>
 
